# FWCore subsystem

add_subdirectory(AbstractServices)
add_subdirectory(Common)
add_subdirectory(Concurrency)
add_subdirectory(Framework)
add_subdirectory(MessageLogger)
add_subdirectory(ParameterSet)
add_subdirectory(ParameterSetReader)
add_subdirectory(PluginManager)
add_subdirectory(PythonFramework)
add_subdirectory(PythonParameterSet)
add_subdirectory(Reflection)
add_subdirectory(ServiceRegistry)
add_subdirectory(SharedMemory)
add_subdirectory(Sources)
add_subdirectory(TestProcessor)
add_subdirectory(Utilities)
add_subdirectory(Version)
# These subdirectories must come after ParameterSet because they use stitched_generate_plugin
add_subdirectory(MessageService)
add_subdirectory(Modules)
add_subdirectory(Integration)
add_subdirectory(Services)
add_subdirectory(TestModules)
